--- a/notebooks/daninunes_sisdac_2025_v1_0.ipynb
+++ b/notebooks/daninunes_sisdac_2025_v1_0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNESU/z1V+/f/iZmoCcGIDI",
+      "authorship_tag": "ABX9TyPlZB8vvkNx6/8ZpbR4PyuV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "height": 1000
         },
         "id": "e5b033c4",
-        "outputId": "62ec7f53-5952-47a4-fedf-6d570c20b8fc"
+        "outputId": "cf9576c5-43d8-4dba-aa7f-c9456b4184de"
       },
       "source": [
         "\"\"\"\n",
@@ -233,7 +233,7 @@
         "\n",
         "    # Gráfico de ranking\n",
         "    plt.figure(figsize=(10,6))\n",
-        "    sns.barplot(x='Fornecedor', y='Topsis_Score', data=resultado, palette='Set2')\n",
+        "    sns.barplot(x='Fornecedor', y='Topsis_Score', data=resultado, palette='Set2', dodge=False)\n",
         "    plt.ylim(0,1)\n",
         "    plt.title('Ranking TOPSIS - Fornecedores (Toritama)')\n",
         "    plt.ylabel('Score')\n",
@@ -368,7 +368,7 @@
         "plt.title('Correlação entre os Indicadores')\n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -515,11 +515,11 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/tmp/ipython-input-2995448852.py:193: FutureWarning: \n",
+            "/tmp/ipython-input-154490667.py:197: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
-            "  sns.barplot(x='Fornecedor', y='Topsis_Score', data=resultado, palette='Set2')\n"
+            "  sns.barplot(x='Fornecedor', y='Topsis_Score', data=resultado, palette='Set2', dodge=False)\n"
           ]
         },
         {
