--- a/notebooks/daninunes_amaai_20250612_v1_0.ipynb
+++ b/notebooks/daninunes_amaai_20250612_v1_0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPDVeebcngjGYwAMFBgCcBY",
+      "authorship_tag": "ABX9TyOWr0+UaMnFe7g8XZdU9TSB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,12 @@
       "cell_type": "code",
       "source": [
         "\"\"\"\n",
-        "Gráfico de Gantt do Projeto AMA AI – Sistema de Apoio à Modelagem Automatizada\n",
+        "# Projeto: AMA AI – Sistema de Apoio à Modelagem Automatizada\n",
+        "# Autora: Daniela Nunes dos Santos Ferreira\n",
+        "# Ano de Desenvolvimento: 2025\n",
+        "# Data: 12/06/2025\n",
+        "# Versão: 1.0\n",
+        "# Descrição: Gráficos de Gantt e métricas de gestão de projetos para o projeto AMA AI.\n",
         "\n",
         "Descrição:\n",
         "Este gráfico apresenta a linha do tempo das macroentregas do projeto AMA AI, que envolve a implementação de soluções de Inteligência Artificial para suporte à decisão em ambientes cívicos e industriais. O projeto inclui:\n",
