--- a/notebooks/daninunes_amaai_20250612_v1_0.ipynb
+++ b/notebooks/daninunes_amaai_20250612_v1_0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOWr0+UaMnFe7g8XZdU9TSB",
+      "authorship_tag": "ABX9TyMfdNI73ZaGO9jF/JTTIXiB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
         "Descrição:\n",
         "Este gráfico apresenta a linha do tempo das macroentregas do projeto AMA AI, que envolve a implementação de soluções de Inteligência Artificial para suporte à decisão em ambientes cívicos e industriais. O projeto inclui:\n",
         "- Planejamento e levantamento de requisitos\n",
-        "- Mapeamento da arquitetura atual e avaliação de maturidade\n",
+        "- Mapeamento da arquitetura atual e avaliação de maturidade MCDM\n",
         "- Desenvolvimento de roadmap de Arquitetura de Dados Moderna\n",
         "- Implementação de Industrial Data Fabric\n",
         "- Estudo e implantação de arquiteturas multiagente com LLMs\n",
