--- a/notebooks/daninunes_amaai_20250612_v1_0.ipynb
+++ b/notebooks/daninunes_amaai_20250612_v1_0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMfdNI73ZaGO9jF/JTTIXiB",
+      "authorship_tag": "ABX9TyMPuX/8dTNyY/6fRingQzqE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,7 +70,7 @@
         "# =======================\n",
         "entregas = [\n",
         "    (\"ME 1 - Planejamento e Requisitos\", 1, 2),\n",
-        "    (\"ME 2 - Arquitetura Atual e Maturidade\", 3, 6),\n",
+        "    (\"ME 2 - Arquitetura Atual e Maturidade MCDM\", 3, 6),\n",
         "    (\"ME 3 - Roadmap de Arquitetura de Dados\", 6, 8),\n",
         "    (\"ME 4 - Implementação do Data Fabric\", 9, 14),\n",
         "    (\"ME 5 - Estudo de Arquitetura Multiagente\", 9, 11),\n",
