--- a/notebooks/danielanunes_aulaoee_2025_v1_0.ipynb
+++ b/notebooks/danielanunes_aulaoee_2025_v1_0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMVWuFBZgrfuJ/m4z9Nsjwa",
+      "authorship_tag": "ABX9TyMexIi7d/aqEu6swricGGnE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
         }
       ],
       "source": [
-        "# Projeto: SISDAC - Sistema de Apoio à Decisão em Ambientes Cívicos (Toritama-PE)\n",
+        "# Projeto: Aplicação dos conceitos de OEE para o Planejamento e Controle da Produção\n",
         "# Autora: Daniela Nunes dos Santos Ferreira\n",
         "# Ano de Desenvolvimento: 2025\n",
         "# Versão: 1.0\n",
